# Autonomous_driving

./: README.md
array_memory_manager/: array_memory_manager.h
geo_spline_vis/: CMakeLists.txt
geo_spline_vis/src/: SGSmooth.cpp  SGSmooth.h  get_data.cpp  get_data.h  main.cpp  vis_geo_spline.cpp  vis_geo_spline.h
navigator/: demo.py  main.py  nav_helpers.py  profiler.py  profiler.txt
navigator/trajectories/: 2024_03_14_16_42_41.csv
simple_tram_odometry/: CMakeLists.txt
simple_tram_odometry/src/: estimate_translation.h  estimate_translation_mono.cpp  evaluate_poses.cpp  find_essential.cpp  kittiodometer.cpp  kittiodometer.h  main.cpp  precompiled.h  setup_optflow.cpp  setup_optflow.h  snapshot.h  tram_filter.cpp  tram_filter.h
stabilizer/: CMakeLists.txt  feature_match.h  stabilizer.h
stabilizer/example/: CMakeLists.txt  stab_example.cpp
stabilizer/src/: feature_match.cpp  stabilizer.cpp
web_plots/: demo.py  main.py
